# KP_Alert_ronald

./: .gitignore  README.md  config.yaml.template  index.html  pyproject.toml  requirements.txt
assets/: index.html
mock_files/: aurora_forecast_browser.webm  kp_product_file_SWIFT_LAST.csv
src/: config.py  kp_index_monitor.py  kp_index_monitor_last.py  kp_index_monitor_last_a_pic.py  kp_index_monitor_video.py
src/other_monitor/: kp_index_monitor_a.py  kp_index_monitor_video.py
test/: kp_index.html
